# splitwise-mcp

./: .env.example  README.md  pyproject.toml  requirements.txt  server.py
