[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splitwise-mcp"
version = "0.1.0"
description = "MCP server for Splitwise"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
splitwise-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
